// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
}

.c1 {
  margin: 0 0;
}

<List
  blacklist={
    Array [
      "columns",
      "flush",
      "ordered",
    ]
  }
  columns={null}
  flush={false}
  ordered={false}
>
  <StyledComponent
    blacklist={
      Array [
        "columns",
        "flush",
        "ordered",
      ]
    }
    columns={null}
    flush={false}
    forwardedRef={null}
    ordered={false}
  >
    <Clean.div
      blacklist={
        Array [
          "columns",
          "flush",
          "ordered",
        ]
      }
      className="c0"
      columns={null}
      flush={false}
      is="ul"
      ordered={false}
    >
      <ul
        className="c0"
      >
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1"
                is="li"
              >
                <li
                  className="c1"
                >
                  Hello Item 1
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1"
                is="li"
              >
                <li
                  className="c1"
                >
                  Hello Item 2
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1"
                is="li"
              >
                <li
                  className="c1"
                >
                  Hello Item 3
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
      </ul>
    </Clean.div>
  </StyledComponent>
</List>
`;

exports[`<List /> with columns set renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

.c0 .c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 33.333333333333336%;
  -ms-flex-preferred-size: 33.333333333333336%;
  flex-basis: 33.333333333333336%;
}

.c2 {
  margin: 0 0;
}

<List
  blacklist={
    Array [
      "columns",
      "flush",
      "ordered",
    ]
  }
  columns={3}
  flush={false}
  ordered={false}
>
  <StyledComponent
    blacklist={
      Array [
        "columns",
        "flush",
        "ordered",
      ]
    }
    columns={3}
    flush={false}
    forwardedRef={null}
    ordered={false}
  >
    <Clean.div
      blacklist={
        Array [
          "columns",
          "flush",
          "ordered",
        ]
      }
      className="c0"
      columns={3}
      flush={false}
      is="ul"
      ordered={false}
    >
      <ul
        className="c0"
      >
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1 c2"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1 c2"
                is="li"
              >
                <li
                  className="c1 c2"
                >
                  Hello Item 1
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1 c2"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1 c2"
                is="li"
              >
                <li
                  className="c1 c2"
                >
                  Hello Item 2
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1 c2"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1 c2"
                is="li"
              >
                <li
                  className="c1 c2"
                >
                  Hello Item 3
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
      </ul>
    </Clean.div>
  </StyledComponent>
</List>
`;

exports[`<List /> with flush set renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
}

.c1 {
  margin: 0 0;
}

<List
  blacklist={
    Array [
      "columns",
      "flush",
      "ordered",
    ]
  }
  columns={null}
  flush={true}
  ordered={false}
>
  <StyledComponent
    blacklist={
      Array [
        "columns",
        "flush",
        "ordered",
      ]
    }
    columns={null}
    flush={true}
    forwardedRef={null}
    ordered={false}
  >
    <Clean.div
      blacklist={
        Array [
          "columns",
          "flush",
          "ordered",
        ]
      }
      className="c0"
      columns={null}
      flush={true}
      is="ul"
      ordered={false}
    >
      <ul
        className="c0"
      >
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1"
                is="li"
              >
                <li
                  className="c1"
                >
                  Hello Item 1
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1"
                is="li"
              >
                <li
                  className="c1"
                >
                  Hello Item 2
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1"
                is="li"
              >
                <li
                  className="c1"
                >
                  Hello Item 3
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
      </ul>
    </Clean.div>
  </StyledComponent>
</List>
`;

exports[`<List /> with ordered prop renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
}

.c1 {
  margin: 0 0;
}

<List
  blacklist={
    Array [
      "columns",
      "flush",
      "ordered",
    ]
  }
  columns={null}
  flush={false}
  ordered={true}
>
  <StyledComponent
    blacklist={
      Array [
        "columns",
        "flush",
        "ordered",
      ]
    }
    columns={null}
    flush={false}
    forwardedRef={null}
    ordered={true}
  >
    <Clean.div
      blacklist={
        Array [
          "columns",
          "flush",
          "ordered",
        ]
      }
      className="c0"
      columns={null}
      flush={false}
      is="ol"
      ordered={true}
    >
      <ol
        className="c0"
      >
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1"
                is="li"
              >
                <li
                  className="c1"
                >
                  Hello Item 1
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1"
                is="li"
              >
                <li
                  className="c1"
                >
                  Hello Item 2
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1"
                is="li"
              >
                <li
                  className="c1"
                >
                  Hello Item 3
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
      </ol>
    </Clean.div>
  </StyledComponent>
</List>
`;

exports[`<List /> with responsive columns set renders correctly 1`] = `
.c3 .c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 33.333333333333336%;
  -ms-flex-preferred-size: 33.333333333333336%;
  flex-basis: 33.333333333333336%;
}

.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

.c0 .c1 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c2 {
  margin: 0 0;
}

@media screen and (min-width:40rem) {
  .c0 .c1 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

@media screen and (min-width:52rem) {
  .c0 .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
  }
}

<List
  blacklist={
    Array [
      "columns",
      "flush",
      "ordered",
    ]
  }
  columns={
    Array [
      1,
      2,
      3,
    ]
  }
  flush={false}
  ordered={false}
>
  <StyledComponent
    blacklist={
      Array [
        "columns",
        "flush",
        "ordered",
      ]
    }
    columns={
      Array [
        1,
        2,
        3,
      ]
    }
    flush={false}
    forwardedRef={null}
    ordered={false}
  >
    <Clean.div
      blacklist={
        Array [
          "columns",
          "flush",
          "ordered",
        ]
      }
      className="c0"
      columns={
        Array [
          1,
          2,
          3,
        ]
      }
      flush={false}
      is="ul"
      ordered={false}
    >
      <ul
        className="c0"
      >
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1 c2"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1 c2"
                is="li"
              >
                <li
                  className="c1 c2"
                >
                  Hello Item 1
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1 c2"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1 c2"
                is="li"
              >
                <li
                  className="c1 c2"
                >
                  Hello Item 2
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
        <ListItem>
          <StyledComponent
            forwardedRef={null}
          >
            <Clean.li
              className="c1 c2"
            >
              <Clean.div
                blacklist={
                  Array [
                    "m",
                    "mt",
                    "mr",
                    "mb",
                    "ml",
                    "mx",
                    "my",
                    "p",
                    "pt",
                    "pr",
                    "pb",
                    "pl",
                    "px",
                    "py",
                    "width",
                    "fontSize",
                    "color",
                    "bg",
                    "fontFamily",
                    "textAlign",
                    "lineHeight",
                    "fontWeight",
                    "fontStyle",
                    "letterSpacing",
                    "display",
                    "maxWidth",
                    "minWidth",
                    "height",
                    "maxHeight",
                    "minHeight",
                    "size",
                    "ratio",
                    "verticalAlign",
                    "alignItems",
                    "alignContent",
                    "justifyItems",
                    "justifyContent",
                    "flexWrap",
                    "flexBasis",
                    "flexDirection",
                    "flex",
                    "justifySelf",
                    "alignSelf",
                    "order",
                    "gridGap",
                    "gridColumnGap",
                    "gridRowGap",
                    "gridColumn",
                    "gridRow",
                    "gridAutoFlow",
                    "gridAutoColumns",
                    "gridAutoRows",
                    "gridTemplateColumns",
                    "gridTemplateRows",
                    "gridTemplateAreas",
                    "gridArea",
                    "border",
                    "borderTop",
                    "borderRight",
                    "borderBottom",
                    "borderLeft",
                    "borderColor",
                    "borderRadius",
                    "boxShadow",
                    "opacity",
                    "overflow",
                    "background",
                    "backgroundImage",
                    "backgroundPosition",
                    "backgroundRepeat",
                    "backgroundSize",
                    "position",
                    "zIndex",
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "textStyle",
                    "colors",
                    "variant",
                    "theme",
                  ]
                }
                className="c1 c2"
                is="li"
              >
                <li
                  className="c1 c2"
                >
                  Hello Item 3
                </li>
              </Clean.div>
            </Clean.li>
          </StyledComponent>
        </ListItem>
      </ul>
    </Clean.div>
  </StyledComponent>
</List>
`;
